[gd_scene load_steps=5 format=3 uid="uid://xjo8a2y26c2b"]

[ext_resource type="Script" uid="uid://dow1to0301mre" path="res://exercises-lists/pt-br/Lista2/Exercicio2/Exercicio2.gd" id="1_5ovto"]

[sub_resource type="LabelSettings" id="LabelSettings_07jpv"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_e0lnp"]
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ovto"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.144063, 0.144063, 0.144062, 1)

[node name="Exercicio2" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_5ovto")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Titulo" type="Label" parent="VBox"]
layout_mode = 2
text = "Calculadora:
Tabuada de um Número"
label_settings = SubResource("LabelSettings_07jpv")
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Entrada" type="LineEdit" parent="VBox/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
placeholder_text = "Insira um número"

[node name="Calcular" type="Button" parent="VBox/HBox"]
layout_mode = 2
text = "Calcular"

[node name="ErroTexto" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_e0lnp")
vertical_alignment = 1

[node name="TabuadaPanel" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_5ovto")

[node name="Scroll" type="ScrollContainer" parent="VBox/TabuadaPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabuadaGrid" type="VBoxContainer" parent="VBox/TabuadaPanel/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="AdicaoLabel" type="Label" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
layout_mode = 2
size_flags_horizontal = 4
text = "Adição"

[node name="AdicaoFlowContainer" type="HFlowContainer" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="SubtracaoLabel" type="Label" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
layout_mode = 2
size_flags_horizontal = 4
text = "Subtração"

[node name="SubtracaoFlowContainer" type="HFlowContainer" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="MultiplicacaoLabel" type="Label" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
layout_mode = 2
size_flags_horizontal = 4
text = "Multiplicação"

[node name="MultiplicacaoFlowContainer" type="HFlowContainer" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="DivisaoLabel" type="Label" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
layout_mode = 2
size_flags_horizontal = 4
text = "Divisao"

[node name="DivisaoFlowContainer" type="HFlowContainer" parent="VBox/TabuadaPanel/Scroll/TabuadaGrid"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[connection signal="pressed" from="VBox/HBox/Calcular" to="." method="calcular"]
